# spec-Drez-sdd

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: database.instructions.md  frontend.instructions.md
.github/prompts/: 001-boostrap-proyecto.clarify.prompt.md  001-bootstrap-proyecto.implement.md  001-bootstrap-proyecto.implement.prompt.md  001-bootstrapt-proyecto.analize-01.prompt.md  001-bootstrapt-proyecto.analyze-02.prompt.md  001-bootstrapt-proyecto.analyze-03.prompt.md  001-botstrap-proyecto.spec.prompt.md  001.bootstrapt-proyecto.analyze.prompt.md  002-blindar-tokens-constitution.prompt.md  004-propiedades-base.plan.prompt.md  004-propiedades-base.specify.prompt.md  005-dashboard-datos-reales.plan.prompt.md  005-dashboard-datos-reales.specify.prompt.md  006-pagina-propiedades-cards.plan.prompt.md  006-pagina-propiedades-cards.spec.prompt.md  007-crear-propiedad.plan.prompt.md  007-crear-propiedad.specify.prompt.md  008-editar-propiedad-plan.prompt.md  008-editar-propiedad.specify.prompt.md  008-editar-propiedad.tasks.prompt.md  setup-constitution.prompt.md
.github/speckit-preflight/: SKILL.md
.specify/: extensions.yml  feature.json  init-options.json  integration.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: spec-template.md
.specify/workflows/: workflow-registry.json
alembic/: env.py  script.py.mako
app/: config.py  database.py  main.py
scripts/: db_preflight.py
tests/: test_smoke.py
(+101 files in other folders)
