[project]
name = "sdd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.41",
    "asyncpg>=0.30.0",
    "alembic>=1.16.4",
    "pydantic-settings>=2.10.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.1",
    "ruff>=0.12.3",
    "mypy>=1.16.1",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["app/modules"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
